--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: "A blog and a portfolio"
 author: "author"
 title: "BlogFolio"
 permalink: pretty
-baseurl: /jekyll-theme-blogfolio
+baseurl: /minho2002.github.io
 
 # social
 github:
