fixed Readme, config, posts

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 name: "minho choi"
-email: "minho2002"
+email: "minho_2002@naver.com"
 url: "https://minho2002/minho2002.github.io"
 description: "My blog"
 author: "minho choi"
